--- a/Taerita2/Taerita2/Taerita2.csproj
+++ b/Taerita2/Taerita2/Taerita2.csproj
@@ -1,5 +1,4 @@
 ﻿<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -102,6 +101,7 @@
       <DependentUpon>TaeritaModel.edmx</DependentUpon>
       <LastGenOutput>TaeritaModel.cs</LastGenOutput>
     </Content>
+    <Content Include="TaeritaWFC.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -154,6 +154,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TaeritaModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="TaeritaWFC.svc.cs">
+      <DependentUpon>TaeritaWFC.svc</DependentUpon>
+    </Compile>
     <Compile Include="TipoVehiculo.cs">
       <DependentUpon>TaeritaModel.tt</DependentUpon>
     </Compile>
@@ -162,7 +165,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
     <EntityDeploy Include="TaeritaModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>TaeritaModel.Designer.cs</LastGenOutput>
@@ -170,6 +172,7 @@
     <Content Include="TaeritaModel.edmx.diagram">
       <DependentUpon>TaeritaModel.edmx</DependentUpon>
     </Content>
+    <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -205,12 +208,6 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
